--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -1,3 +1,13 @@
+.navbar {
+  background-color: #94baec;
+  transition: font-size 0.2s, background-color 0.5s;
+  font-size: 30px;
+}
+
+.navbar li {
+  font-size: inherit;
+}
+
 @media (max-width: 420px) {
   .navbar li:first-child {
     width: 25%;
