--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -1,7 +1,8 @@
 .navbar {
   background-color: #94baec;
-  transition: font-size 0.2s, background-color 0.5s;
+  transition: font-size 0.2s, background-color 0.5s, box-shadow 0.2s;
   font-size: 30px;
+  box-shadow: 5px 3px 8px;
 }
 
 .navbar li {
